[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/player_death_menu.gd" type="Script" id=1]

[node name="PlayerDeathMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.384314, 0.133333, 0.133333, 0.380392 )

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = -60.0
margin_right = 225.0
margin_bottom = 60.0

[node name="Label" type="Label" parent="Background/VBoxContainer"]
margin_right = 450.0
margin_bottom = 14.0
text = "You died!"
align = 1

[node name="Retry" type="Button" parent="Background/VBoxContainer"]
margin_top = 18.0
margin_right = 450.0
margin_bottom = 38.0
text = "Try again"

[node name="MainMenu" type="Button" parent="Background/VBoxContainer"]
margin_top = 42.0
margin_right = 450.0
margin_bottom = 62.0
text = "Return to main menu"

[node name="Quit" type="Button" parent="Background/VBoxContainer"]
margin_top = 66.0
margin_right = 450.0
margin_bottom = 86.0
text = "Quit game"

[connection signal="pressed" from="Background/VBoxContainer/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
